--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "repository for backend cohort - Radium",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,10 +18,15 @@
   },
   "homepage": "https://github.com/sabihak89/radium#readme",
   "dependencies": {
+    "aws-sdk": "^2.1047.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.14"
+    "mongoose": "^6.0.14",
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.15"
   }
 }
